--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         padding: 0vw;
 background-image: url(gym-bg.jpeg);  
 background-repeat: no-repeat;
-background-size: cover;
+background-size: auto;
   }
 
 .left{
