--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ display:inline-block;
 .navbar li{
     display:inline-block;
     font-size: 2.5vw;
-Left:2vw;
+    left:0.5vw;
     
 }
 .navbar li a{
