--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ display:inline-block;
     color: rgb(231, 203, 203);
     padding: 0.6vw 1.3vw;
     text-decoration: none;
+text-direction: row;
     
 }
 .navbar li a:hover , .navbar li a.active
