--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ background-size: 100%;
 .mid{
     display: block;
     width: 60vw;
+left: 1vw;
      margin:  auto; /* for bringing text into centre */
 }
 .right{
