--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         padding: 0vw;
 background-image: url(gym-bg.jpeg);  
 background-repeat: no-repeat;
-background-size: 100%;
+background-size: 100% 100%;
   }
 
 .left{
@@ -33,6 +33,7 @@ background-size: 100%;
     display: block;
     width: 60vw;
 left: 0.5vw;
+top: 2.5vw;
      margin:  auto; /* for bringing text into centre */
 }
 .right{
