--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@ background-color: grey;
     width: 50%;
     margin: auto;
 }
-
+.last {
+Color: White;
+Background: Black;
+}
 </style>
 </head>
 
@@ -179,5 +182,8 @@ background-color: grey;
         <button class="btn">submit</button>
     </form>
 </div>
+<footer class="last">
+      Copyright &copy; www.snehafitness com. All rights reserved!
+  </footer>  
     </body>
 </html>
